--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {color: #1f555f; padding:8px; background-color:#DCD0FF; font-family: Verdan
 html {min-height: 100%; position: relative; padding-top: 0;}
 footer {position: absolute; bottom: 8px; overflow: hidden; height: 50px; text-align: center; margin: auto;}
 * { box-sizing: border-box; }
-img {margin:0px auto; display:block; max-width:100%;}
-.frontimage {max-width: 250px;}
+img.center {margin:0px auto; display:block; max-width:100%;}
+.frontimage {margin:0px auto; display:block; max-width: 250px;}
 li {list-style-type: square;}
 .minititle {font-size: .75em; margin-top: 0px; margin-bottom: 0px;}
 .title {margin-bottom: 0; margin-top: 0;}
